# Synapse-Code-Auditor

./: .dockerignore  .gitignore  Dockerfile  README-LANDING.md  README.md  debug_api.py  debug_boundary.py  debug_check.py  debug_phase2.py  graders.json  infer_out.txt  inference.py  openenv.yaml  pyproject.toml  requirements.txt  validate_submission.py
.github/: copilot-instructions.md
app/: __init__.py  env.py  grader.py  inference.py  main.py  models.py  tasks.py
client/: next.config.ts  package-lock.json  package.json  vercel.json
client/public/: maintenance.html
client/src/app/: globals.css  layout.tsx  page.tsx
client/src/app/components/: CodeAuditor.tsx
landing/src/app/: globals.css  layout.tsx  page.tsx
landing/src/app/api/audit/: route.ts
server/: __init__.py  app.py
