[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synapse-code-auditor"
version = "1.0.0"
description = "OpenEnv-compatible deterministic AI code review environment"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Mayank" }
]
dependencies = [
  "fastapi==0.115.12",
  "uvicorn[standard]==0.35.0",
  "pydantic==2.11.7",
  "openai==2.7.2",
  "requests==2.32.3",
  "openenv-core==0.2.3"
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
packages = ["app", "server"]
